--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,16 +1,29 @@
 FROM debian:bullseye
 
 # Install MariaDB
-RUN apt-get update && apt-get install -y mariadb-server && rm -rf /var/lib/apt/lists/*
+RUN apt-get update -y && apt-get install mariadb-server -y && rm -rf /var/lib/apt/lists/*
+
+RUN mkdir -p /run/mysqld && chown -R mysql:mysql /run/mysqld
+RUN mkdir -p /var/lib/mysql && chown -R mysql:mysql /var/lib/mysql
+COPY ./tools/50-server.cnf /etc/mysql/mariadb.conf.d/
+COPY ./tools/script.sh /
+RUN /etc/init.d/mariadb start
+
+VOLUME /var/lib/mysql
+
+EXPOSE 3306
+
+
+
+# CMD ["/script.sh", "mariadbd"]
+# CMD ["mysqld_safe"]
+# CMD ["/script.sh"]
+CMD ["mariadbd"]
+
+
 
 # Copy custom MariaDB configuration files
 # COPY my.cnf /etc/mysql/my.cnf
 
-RUN mkdir -p /run/mysqld && chown -R mysql:mysql /run/mysqld
-
-# Expose port 3306
-EXPOSE 3306
-
-# Command to run when the container starts
-CMD ["mysqld", "--user=mysql", "--console"]
+# Expor a porta do MySQL
 
