all connected in the default bridge

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -19,8 +19,11 @@ RUN apt-get update && apt-get install -y \
 
 RUN mkdir -p /run/php/php7.4-fpm && chown -R www-data:www-data /run/php/php7.4-fpm
 
+COPY www.conf /etc/php/7.4/fpm/pool.d/www.conf
+
 # Expose port (if needed)
-# EXPOSE 80
+EXPOSE 9000
 
 # Command to run when the container starts
 CMD ["php-fpm7.4", "-F"]
+# CMD ["tail", "-f"]
