--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,11 @@
 version: '3'
 
+
+# networks:
+#   my_network:
+#     driver: bridge
+
+
 services:
   incep_mariadb:
     image: incep_mariadb:latest
@@ -7,24 +13,27 @@ services:
       context: requirements/mariadb/
       dockerfile: Dockerfile
     ports:
-      - "8001:3306"  # Mapeia a porta 3306 do contêiner para a porta 8001 do host
+      - "8001:3306"
     network_mode: bridge
     volumes:
       - /home/llopes-d/data/database:/var/lib/mysql
-  # incep_wordpress:
-  #   image: incep_wordpress:latest
-  #   build:
-  #     context: requirements/wordpress/
-  #     dockerfile: Dockerfile
-  #   volumes:
-  #     - /home/llopes-d/data/frontend:/var/www
-  # icep_nginx:
-  #   image: incep_nginx:latest
-  #   build:
-  #     context: requirements/nginx/
-  #     dockerfile: Dockerfile
-  #   volumes:
-  #     - /home/llopes-d/data/frontend:/var/www
-  #   ports:
-  #     - "8000:443"  # Mapeia a porta 80 do contêiner para a porta 8000 do host
-  #   network_mode: bridge
+  icep_nginx:
+    image: incep_nginx:latest
+    build:
+      context: requirements/nginx/
+      dockerfile: Dockerfile
+    volumes:
+      - /home/llopes-d/data/frontend:/var/www/html
+    ports:
+      - "8000:443"
+    network_mode: bridge
+  incep_wordpress:
+    image: incep_wordpress:latest
+    build:
+      context: requirements/wordpress/
+      dockerfile: Dockerfile
+    volumes:
+      - /home/llopes-d/data/frontend:/var/www/html
+    ports:
+      - "8002:9000"
+    network_mode: bridge
