--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -70,15 +70,25 @@ http {
 		ssl_certificate_key /etc/nginx/ssl/key.key;
 
 		root /var/www/html;
+		index index.php;
 
 		# Add index.php to the list if you are using PHP
-		index index.html index.htm index.nginx-debian.html;
+		index index.html index.htm index.nginx-debian.html index.php;
 
 		server_name _;
 
 		location / {
 			try_files $uri $uri/ =404;
 		}
+
+		# pass PHP scripts on Nginx to FastCGI (PHP-FPM) server
+		location ~ \.php$ {
+		include snippets/fastcgi-php.conf;
+		# Nginx php-fpm sock config:
+		# fastcgi_pass unix:/run/php/php8.1-fpm.sock;
+		# Nginx php-cgi config :
+		fastcgi_pass 172.17.0.3:9000;
+	}
 
 	}
 
