--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -87,7 +87,8 @@ http {
 		# Nginx php-fpm sock config:
 		# fastcgi_pass unix:/run/php/php8.1-fpm.sock;
 		# Nginx php-cgi config :
-		fastcgi_pass 172.17.0.3:9000;
+		# fastcgi_pass wordpress:9000;
+		fastcgi_pass 172.18.0.4:9000;
 	}
 
 	}
