--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -12,13 +12,11 @@ services:
     build:
       context: requirements/mariadb/
       dockerfile: Dockerfile
-    ports:
-      - "8001:3306"
     networks:
       - my_network
     volumes:
-      # - /home/llopes-d/data/database:/var/lib/mysql
-      - /Users/user/Documents/data/database:/var/lib/mysql
+      - /home/llopes-d/data/database:/var/lib/mysql
+      # - /Users/user/Documents/data/database:/var/lib/mysql
   nginx:
     container_name: nginx
     image: nginx:latest
@@ -26,13 +24,12 @@ services:
       context: requirements/nginx/
       dockerfile: Dockerfile
     volumes:
-      # - /home/llopes-d/data/frontend:/var/www/html
-      - /Users/user/Documents/data/frontend:/var/www/html
+      - /home/llopes-d/data/frontend:/var/www/html
+      # - /Users/user/Documents/data/frontend:/var/www/html
     ports:
-      - "8000:443"
-    # network_mode: bridge
-    networks:        # Adicionando a seção de redes
-      - my_network  
+      - "443:443"
+    networks:
+      - my_network
   wordpress:
     container_name: wordpress
     image: wordpress:latest
@@ -40,10 +37,7 @@ services:
       context: requirements/wordpress/
       dockerfile: Dockerfile
     volumes:
-      # - /home/llopes-d/data/frontend:/var/www/html
-      - /Users/user/Documents/data/frontend:/var/www/html
-    ports:
-      - "8002:9000"
-    # network_mode: bridge
-    networks:        # Adicionando a seção de redes
-      - my_network  
+      - /home/llopes-d/data/frontend:/var/www/html
+      # - /Users/user/Documents/data/frontend:/var/www/html
+    networks:
+      - my_network
