--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y vsftpd
+RUN apt-get update && apt-get install -y vsftpd && \
+   rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /var/run/vsftpd/empty && chown root:root /var/run/vsftpd/empty
 
