--- a/srcs/.env
+++ b/srcs/.env
@@ -1,1 +1,8 @@
-#NOTHING YET :(
+DB_ADMIN=master
+DB_ADMIN_PW=123
+DB_DBNAME=wordpress
+
+DOMAIN_NAME=https://127.0.0.1
+
+MY_USER=llopes-d
+MY_USER_PW=123
