--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -8,9 +8,7 @@ services:
   mariadb:
     container_name: mariadb
     image: mariadb:latest
-    build:
-      context: requirements/mariadb/
-      dockerfile: Dockerfile
+    build: requirements/mariadb/
     networks:
       - my_network
     volumes:
@@ -21,9 +19,7 @@ services:
   nginx:
     container_name: nginx
     image: nginx:latest
-    build:
-      context: requirements/nginx/
-      dockerfile: Dockerfile
+    build: requirements/nginx/
     volumes:
       # - /home/llopes-d/data/frontend:/var/www/html
       - /Users/user/Documents/data/frontend:/var/www/html
@@ -34,9 +30,7 @@ services:
   wordpress:
     container_name: wordpress
     image: wordpress:latest
-    build:
-      context: requirements/wordpress/
-      dockerfile: Dockerfile
+    build: requirements/wordpress/
     volumes:
       # - /home/llopes-d/data/frontend:/var/www/html
       - /Users/user/Documents/data/frontend:/var/www/html
@@ -47,9 +41,7 @@ services:
   ftp:
     container_name: ftp
     image: ftp:latest
-    build:
-      context: requirements/bonus/ftp/
-      dockerfile: Dockerfile
+    build: requirements/bonus/ftp/
     volumes:
       # - /home/llopes-d/data/frontend:/var/www/html
       - /Users/user/Documents/data/frontend:/var/www/html
@@ -64,16 +56,12 @@ services:
     image: adminer:latest
     ports:
       - "8080:8080"
-    build:
-      context: requirements/bonus/adminer/
-      dockerfile: Dockerfile
+    build: requirements/bonus/adminer/
     networks:
       - my_network
   redis:
     container_name: redis
     image: redis:latest
-    build:
-      context: requirements/bonus/redis/
-      dockerfile: Dockerfile
+    build: requirements/bonus/redis/
     networks:
       - my_network
