--- a/srcs/.env
+++ b/srcs/.env
@@ -6,3 +6,10 @@ DOMAIN_NAME=https://127.0.0.1
 
 MY_USER=llopes-d
 MY_USER_PW=123
+
+# DB_VOLUME=/home/llopes-d/data/database
+DB_VOLUME=/Users/user/Documents/data/database
+
+# FRONTEND_VOLUME=/home/llopes-d/data/frontend
+FRONTEND_VOLUME=/Users/user/Documents/data/frontend
+
