fix ftp service

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,11 +1,11 @@
 DB_ADMIN=master
-DB_ADMIN_PW=123
+DB_ADMIN_PW=admin
 DB_DBNAME=wordpress
 
 DOMAIN_NAME=https://127.0.0.1
 
 MY_USER=llopes-d
-MY_USER_PW=123
+MY_USER_PW=admin
 
 DB_VOLUME=/home/llopes-d/data/database
 FRONTEND_VOLUME=/home/llopes-d/data/frontend
