--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -14,7 +14,6 @@ services:
     networks: [inception]
     env_file: [.env]
 
-
   nginx:
     restart: on-failure
     container_name: nginx
@@ -41,7 +40,7 @@ services:
     volumes: ["${FRONTEND_VOLUME}:/var/www/html"]
     networks: [inception]
     env_file: [.env]
-    ports: [21:21]
+    ports: ["21:21", "8000:8000"]
 
   adminer:
     restart: on-failure
