--- a/srcs/.env
+++ b/srcs/.env
@@ -2,11 +2,10 @@ DB_ADMIN=master
 DB_ADMIN_PW=admin
 DB_DBNAME=wordpress
 
-DOMAIN_NAME=https://127.0.0.1
+DOMAIN_NAME=https://llopes-d.42.fr
 
 MY_USER=llopes-d
 MY_USER_PW=admin
 
 DB_VOLUME=/home/llopes-d/data/database
 FRONTEND_VOLUME=/home/llopes-d/data/frontend
-
