--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,8 +1,6 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y nginx && rm -rf /var/lib/apt/lists/*
-
-RUN rm -rf /etc/nginx/nginx.conf
+RUN apt-get update && apt-get install -y nginx
 
 COPY ./tools/nginx.conf /etc/nginx/
 COPY ./tools/ssl /etc/nginx/ssl/
