--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -2,8 +2,7 @@ FROM debian:bullseye
 
 RUN apt-get update && apt-get install -y \
     wget php php-mysqli php-pdo php-pgsql \
-    php-json php-zip php-xml php-mbstring && \
-    rm -rf /var/lib/apt/lists/*
+    php-json php-zip php-xml php-mbstring
 
 RUN mkdir -p /var/www/html \
     && wget "https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1.php" -O /var/www/html/index.php
