--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,7 +1,6 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y vsftpd && \
-   rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y vsftpd
 
 RUN mkdir -p /var/run/vsftpd/empty && chown root:root /var/run/vsftpd/empty
 
