--- a/srcs/requirements/bonus/redis/Dockerfile
+++ b/srcs/requirements/bonus/redis/Dockerfile
@@ -1,6 +1,5 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y redis && \
-   rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y redis
 
 CMD ["redis-server", "--protected-mode", "no"]
