--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -56,15 +56,11 @@ http {
 	# Virtual Host Configs
 	##
 
-	include /etc/nginx/conf.d/*.conf;
 	server {
-		listen 80 default_server;
-		listen [::]:80 default_server;
-
 		# SSL configuration
 		#
-		listen 443 ssl default_server;
-		listen [::]:443 ssl default_server;
+		listen 443 ssl;
+		listen [::]:443 ssl;
 
 		ssl_certificate /etc/nginx/ssl/cert.crt;
 		ssl_certificate_key /etc/nginx/ssl/key.key;
@@ -72,20 +68,9 @@ http {
 		root /var/www/html;
 		index index.php;
 
-		# Add index.php to the list if you are using PHP
-		index index.html index.htm index.nginx-debian.html index.php;
-
-		server_name _;
-
-		location / {
-			try_files $uri $uri/ =404;
-		}
-
 		# pass PHP scripts on Nginx to FastCGI (PHP-FPM) server
 		location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
-		# Nginx php-fpm sock config:
-		# fastcgi_pass unix:/run/php/php8.1-fpm.sock;
 		# Nginx php-cgi config :
 		fastcgi_pass wordpress:9000;
 	}
