--- a/srcs/requirements/bonus/monstaftp/Dockerfile
+++ b/srcs/requirements/bonus/monstaftp/Dockerfile
@@ -1,7 +1,6 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y apache2 php \
-   php-mbstring wget unzip
+RUN apt-get update && apt-get install -y php wget unzip
 
 RUN mkdir -p /var/www/html
 
@@ -10,8 +9,8 @@ WORKDIR /var/www/html
 COPY ./tools/monsta_install.zip /var/www/html
 
 RUN unzip monsta_install.zip && \
-   rm -rf monsta_install.zip && \
-   cp -r mftp/* .
+cp -r mftp/* . && \
+rm -rf monsta_install.zip mftp
 
 RUN sed -i 's/memory_limit = -1/memory_limit = 10M/g' /etc/php/7.4/cli/php.ini
 
