--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -1,10 +1,8 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y \
-    wget php php-mysqli php-pdo php-pgsql \
-    php-json php-zip php-xml php-mbstring
+RUN apt-get update && apt-get install -y wget php php-mysql
 
-RUN mkdir -p /var/www/html \
-    && wget "https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1.php" -O /var/www/html/index.php
+RUN mkdir -p /var/www/html && \
+   wget "https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1.php" -O /var/www/html/index.php
 
 CMD ["php", "-S", "0.0.0.0:8000", "-t", "/var/www/html"]
