--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -59,6 +59,7 @@ services:
     build: requirements/bonus/ftp/
     volumes: ["frontend:/var/www/html"]
     networks: [inception]
+    depends_on: [wordpress]
     env_file: [.env]
     ports: ["21:21", "8010-8040:8010-8040"]
 
@@ -67,20 +68,21 @@ services:
     image: monstaftp:mine
     container_name: monstaftp
     build: requirements/bonus/monstaftp/
+    depends_on: [ftp]
     networks: [inception]
     ports: ["8080:8080"]
 
-  adminer:
-    restart: on-failure
-    image: adminer:mine
-    container_name: adminer
-    build: requirements/bonus/adminer/
-    networks: [inception]
-    ports: [8000:8000]
+  # adminer:
+  #   restart: on-failure
+  #   image: adminer:mine
+  #   container_name: adminer
+  #   build: requirements/bonus/adminer/
+  #   networks: [inception]
+  #   ports: [8000:8000]
 
-  redis:
-    restart: on-failure
-    image: redis:mine
-    container_name: redis
-    build: requirements/bonus/redis/
-    networks: [inception]
+  # redis:
+  #   restart: on-failure
+  #   image: redis:mine
+  #   container_name: redis
+  #   build: requirements/bonus/redis/
+  #   networks: [inception]
