--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -6,6 +6,4 @@ RUN mkdir -p /var/run/vsftpd/empty && chown root:root /var/run/vsftpd/empty
 
 COPY ./tools /
 
-EXPOSE 21
-
-CMD ["./vsftpd.sh"]
+ENTRYPOINT ["/vsftpd.sh"]
