--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get update -y && apt-get install mariadb-server -y
 
 COPY ./tools/mariadb.sh /
 
-CMD ["/mariadb.sh"]
+ENTRYPOINT ["/mariadb.sh"]
