--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -72,17 +72,25 @@ services:
     networks: [inception]
     ports: ["8080:8080"]
 
-  # adminer:
-  #   restart: on-failure
-  #   image: adminer:mine
-  #   container_name: adminer
-  #   build: requirements/bonus/adminer/
-  #   networks: [inception]
-  #   ports: [8000:8000]
+  adminer:
+    restart: on-failure
+    image: adminer:mine
+    container_name: adminer
+    build: requirements/bonus/adminer/
+    networks: [inception]
+    ports: [8000:8000]
 
-  # redis:
-  #   restart: on-failure
-  #   image: redis:mine
-  #   container_name: redis
-  #   build: requirements/bonus/redis/
-  #   networks: [inception]
+  redis:
+    restart: on-failure
+    image: redis:mine
+    container_name: redis
+    build: requirements/bonus/redis/
+    networks: [inception]
+
+  portfolio:
+    restart: on-failure
+    image: portfolio:mine
+    container_name: portfolio
+    build: requirements/bonus/portfolio/
+    networks: [inception]
+    ports: ["80:80"]
