--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:bullseye
 
 RUN apt-get update && apt-get install -y nginx
 
-COPY ./tools/nginx.conf /etc/nginx/
+COPY ./conf/nginx.conf /etc/nginx/
 COPY ./tools/ssl /etc/nginx/ssl/
 
 CMD ["nginx"]
